css/style.css
:root {
  --bg-color-dark: #0a1d3a;
  --bg-color-light: #162840;
  --text-color: whitesmoke;
  --button-hover: #4a5e71;
  --yellow-links: #fed428;
  --off-white-shadow: rgba(250, 249, 246, 0.5);
}

body {
  background-image: linear-gradient(to right, var(--bg-color-dark), var(--bg-color-light));
  color: var(--text-color);
}

.center {
    display: block; 
    margin-left: auto;
    margin-right: auto;
}

/* mobile */
@media (max-width: 750px) {
  .center {
    width: 90%;
  }
  body {
    font-size: 15px;
  }
}
/* desktop */
@media (min-width: 751px) {
  .center {
    width: 70%;
  }
  body {
    font-size: 20px;
  }
}

.centertext {
    text-align: center;
}

#navbarIcon {
  height: 35px; 
  width: auto; 
  margin-top: 3px;
}

.navbar {
    display: inline-flex;
    width: 100%;
    justify-content: space-between;
    position: sticky;
    top: 0;
    z-index: 200;
    background-image: linear-gradient(to right, var(--bg-color-dark), var(--bg-color-light));
  }
 
.navbar > a {
    float: left;
    color: var(--text-color);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
  }
  
.dropdown {
    float: left;
  }
  
.dropdown > .dropbtn {
    border: none;
    outline: none;
    color: var(--text-color);
    padding: 14px 16px;
    background-color: inherit;
    font-family: inherit;
    margin: 0;
}

/* mobile */
@media (max-width: 750px) {
  .navbar {
    height: 42px;
  }
  .dropdown, .dropbtn, .navbar > a {
    font-size: 14px;
  }
  .dropdown-content {
    width: 82px;
  }
}

/* desktop */
@media (min-width: 751px) {
  .navbar {
    height: 50px;
  }
  .dropdown, .dropbtn, .navbar > a {
    font-size: 18px;
  }
  .dropdown-content {
    width: 98.66px;
  }
}

  
.navbar > a:hover, .dropdown:hover, .dropbtn {
  background-color: var(--button-hover);
}

.dropbtn:hover {
  cursor: pointer;
}
.dropdown-content {
    display: none;
    position: absolute;
    background-color: var(--button-hover);
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 300; 
    position: sticky;
  }
  
.dropdown-content > a {
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
  }
  
.dropdown-content a:hover {
    background-color: var(--text-color);
  }
  
.dropdown:hover .dropdown-content {
    display: block;
  }

a:link, a:visited {
    color: var(--yellow-links);
  }
  
a:hover {
    color: blue;
  }
  
  
a:active {
    color: var(--text-color);
  }

.navbar > a {
    color: var(--text-color);
}

.navbar > div > div > a {
    color: var(--bg-color-dark);
}

.imageButton {
  padding: 0!important;
}

.imageButton:hover {
  background-color: transparent!important;
}

.hkmBanner {
  height: auto;
}

/* mobile */
@media (max-width: 750px) {
  .hkmBanner {
    width: 150px;
  }
}

/* desktop */
@media (min-width: 751px) {
  .hkmBanner {
    width: 200px;
  }
}

.centerItemContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.standardButton {
  display: inline-flex;
  padding: 10px 20px;
  background-color: var(--yellow-links);
  color: var(--bg-color-dark) !important;
  border: none;
  text-align: center;
  text-decoration: none;
  width: auto;
  justify-content: center;
  align-items: center;
}

.standardButton:hover {
  background-color: var(--button-hover);
  color: var(--bg-color-dark) !important;
  cursor: pointer;
}

.whiteGlowButton {
  background-color: var(--text-color);
  box-shadow: 0px 0px 20px 2px rgba(250, 249, 246, 0.5);
}

.downloadIcon {
  margin-left: 10px;
}

.sourceCodeBadge {
  height: 20px; 
  width: auto;
  position: fixed;
  right: 0;
  bottom: 0;
}

.expander {
  cursor: pointer;
}
.expander:hover{
  background-color: var(--bg-color-dark) !important;
}

.expandable {
  display: none;
}

.fit-width {
  width: -moz-fit-content;
  width: fit-content;
}

.expanderIcon{
  margin-left: 10px;
  position: relative;
  top: 1px;
}

/* mobile */
@media (max-width: 750px) {
  .expanderIcon {
      top: 3px;
      }
  }

.expanderIconFlipper {
  transform: rotate(180deg);
}

